unpackaged/main/default/objects/Database__c/fields/Shipping_Address_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address Accurate?</label>
    <type>Checkbox</type>
</CustomField>