unpackaged/main/default/objects/Database__c/fields/SMS_Tools__c.field-meta.xml
<CustomField>
    <fullName>SMS_Tools__c</fullName>
    <inlineHelpText>If yes, which tool(s)?</inlineHelpText>
    <label>SMS Tools</label>
    <type>TextArea</type>
</CustomField>