unpackaged/main/default/objects/Database__c/fields/Targeted_properties_Which_do_you_work_w__c.field-meta.xml
<CustomField>
    <fullName>Targeted_properties_Which_do_you_work_w__c</fullName>
    <inlineHelpText>Single-family homes, 
condos, beach homes, 
multifamily homes,
investment properties, 
vineyard, 
land, 
vacation homes,
town homes, 
luxury homes/estates, 
co-ops, 
commercial properties,
fixer-uppers, 
retirement homes, 
other</inlineHelpText>
    <label>Targeted properties: Which do you work w</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>