unpackaged/main/default/objects/Database__c/fields/Tax_ID_EIN__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_EIN__c</fullName>
    <inlineHelpText>Please enter your 9-digit EIN (XX-XXXXXXX) if you have one. Sole proprietors without employees typically don&#39;t need an EIN.</inlineHelpText>
    <label>Tax ID/ EIN</label>
    <type>TextArea</type>
</CustomField>