unpackaged/main/default/objects/Database__c/fields/These_blogs_are_intended_for_SEO_purpose__c.field-meta.xml
<CustomField>
    <fullName>These_blogs_are_intended_for_SEO_purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>These blogs are intended for SEO purpose</label>
    <type>Checkbox</type>
</CustomField>