unpackaged/main/default/objects/Database__c/fields/Tier_Plan_Correct__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tier Plan Correct?</label>
    <type>Checkbox</type>
</CustomField>