unpackaged/main/default/objects/Database__c/fields/Topics_Approved__c.field-meta.xml
<CustomField>
    <fullName>Topics_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are all the blog topics currently approved by the client? Mark checkbox if client has approved all their topics for this subscription year.</inlineHelpText>
    <label>Topics Approved?</label>
    <type>Checkbox</type>
</CustomField>