unpackaged/main/default/objects/Database__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Credentials</fullName>
            </value>
            <value>
                <fullName>Google Credentials</fullName>
            </value>
            <value>
                <fullName>Instagram Credentials</fullName>
            </value>
            <value>
                <fullName>LinkedIn Credentials</fullName>
            </value>
            <value>
                <fullName>Twitter Credentials</fullName>
            </value>
            <value>
                <fullName>Design Quiz</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Social Media Basic Quiz</fullName>
            </value>
            <value>
                <fullName>Social Media Premium/Dominance Quiz</fullName>
            </value>
            <value>
                <fullName>Strategy Brief</fullName>
                <label>Strategy brief</label>
            </value>
            <value>
                <fullName>On-Demand Ads</fullName>
            </value>
            <value>
                <fullName>Design Intake Call</fullName>
            </value>
            <value>
                <fullName>Plan Migration</fullName>
            </value>
            <value>
                <fullName>Health Assessment</fullName>
            </value>
            <value>
                <fullName>SEO Pro</fullName>
            </value>
            <value>
                <fullName>Leads Pro</fullName>
            </value>
            <value>
                <fullName>AI Lead Nurture</fullName>
            </value>
            <value>
                <fullName>SEO Blog Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>