unpackaged/main/default/objects/Database__c/fields/Unique_Selling_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Unique_Selling_Proposition__c</fullName>
    <label>Unique Selling Proposition</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>