unpackaged/main/default/objects/Database__c/fields/Verify_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Verify_Billing_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needed due to issue with subscription/marketing fee fields at the account level not updating for addendums/changes - once mrr field design has been completed this field can be deleted at some future date</description>
    <inlineHelpText>Verify billing amounts in Stripe, ensuring the sums for billing align at the level of the account.</inlineHelpText>
    <label>Verify Billing Amount</label>
    <type>Checkbox</type>
</CustomField>