unpackaged/main/default/objects/Database__c/fields/What_are_the_top_3_areas_that_we_should__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_top_3_areas_that_we_should__c</fullName>
    <inlineHelpText>Priority Locations: These are the areas where we will focus our primary SEO efforts. Think about the cities or town where you are currently doing business or where you want to establish presence in the coming year</inlineHelpText>
    <label>Top 3 areas that we should prioritize</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>