unpackaged/main/default/objects/Database__c/fields/What_are_you_trying_to_do_and_what_is_yo__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_trying_to_do_and_what_is_yo__c</fullName>
    <inlineHelpText>What are you trying to do and what is your ideal outcome?</inlineHelpText>
    <label>Ideal outcome</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>