unpackaged/main/default/objects/Database__c/fields/What_areas_do_you_want_to_focus_on__c.field-meta.xml
<CustomField>
    <fullName>What_areas_do_you_want_to_focus_on__c</fullName>
    <label>What areas do you want to focus on?</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>