unpackaged/main/default/objects/Database__c/fields/What_CRM_do_you_have_in_place__c.field-meta.xml
<CustomField>
    <fullName>What_CRM_do_you_have_in_place__c</fullName>
    <description>What CRM do you have in place? Does it have drip capabilities? How many leads in your databases?</description>
    <label>What CRM do you have in place?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>