unpackaged/main/default/objects/Database__c/fields/What_is_the_age_range_of_your_target_cli__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_age_range_of_your_target_cli__c</fullName>
    <description>What is the age range of your target client? Are they married/single?</description>
    <label>Age range/Married/single?</label>
    <length>1110</length>
    <type>LongTextArea</type>
</CustomField>