unpackaged/main/default/objects/Database__c/fields/What_is_your_email_address__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_email_address__c</fullName>
    <label>What is your email address?</label>
    <type>Email</type>
</CustomField>