unpackaged/main/default/objects/Database__c/fields/What_is_your_minimum_monthly_ad_budget__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_minimum_monthly_ad_budget__c</fullName>
    <description>What is your minimum monthly ad budget? (what you spend on Facebook ads or Google ads only)</description>
    <inlineHelpText>What is your minimum monthly ad budget? (what you spend on Facebook ads or Google ads only)</inlineHelpText>
    <label>What is your minimum monthly ad budget?</label>
    <type>TextArea</type>
</CustomField>