unpackaged/main/default/objects/Database__c/fields/What_is_your_name__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_name__c</fullName>
    <label>What is your name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>