unpackaged/main/default/objects/Database__c/fields/What_is_your_target_location__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_target_location__c</fullName>
    <label>What is your target location?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>