unpackaged/main/default/objects/Database__c/fields/What_is_your_why__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_why__c</fullName>
    <label>What is your “why”?</label>
    <type>TextArea</type>
</CustomField>