unpackaged/main/default/objects/Database__c/fields/What_themes_would_you_like_us_to_write_y__c.field-meta.xml
<CustomField>
    <fullName>What_themes_would_you_like_us_to_write_y__c</fullName>
    <label>What themes would you like us to write y</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>