unpackaged/main/default/objects/Database__c/fields/What_type_of_leads_are_you_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_leads_are_you_looking_for__c</fullName>
    <label>What type of leads are you looking for?</label>
    <type>TextArea</type>
</CustomField>