unpackaged/main/default/objects/Database__c/fields/What_would_you_like_your_clients_to_know__c.field-meta.xml
<CustomField>
    <fullName>What_would_you_like_your_clients_to_know__c</fullName>
    <inlineHelpText>What would you like your clients to know about you?</inlineHelpText>
    <label>What would you like your clients to know</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>