unpackaged/main/default/objects/Database__c/fields/Who_are_the_main_points_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Who_are_the_main_points_of_contact__c</fullName>
    <label>Who are the main points of contact?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>