unpackaged/main/default/objects/Database__c/fields/Who_are_your_top_two_or_three_competitor__c.field-meta.xml
<CustomField>
    <fullName>Who_are_your_top_two_or_three_competitor__c</fullName>
    <label>Who are your top two or three competitor</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>