unpackaged/main/default/objects/Database__c/fields/Why_is_your_client_buying_or_selling_the__c.field-meta.xml
<CustomField>
    <fullName>Why_is_your_client_buying_or_selling_the__c</fullName>
    <description>Why is your client buying or selling their home? What kinds of questions do they ask you?</description>
    <inlineHelpText>Why is your client buying or selling their home? What kinds of questions do they ask you?</inlineHelpText>
    <label>Is your client buying or selling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>