unpackaged/main/default/objects/Database__c/fields/X1_Gift_Recipient_Checked__c.field-meta.xml
<CustomField>
    <fullName>X1_Gift_Recipient_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 Gift Recipient Checked?</label>
    <type>Checkbox</type>
</CustomField>