unpackaged/main/default/objects/Database__c/fields/X3_5_keywords_that_describe_your_brand__c.field-meta.xml
<CustomField>
    <fullName>X3_5_keywords_that_describe_your_brand__c</fullName>
    <label>3-5 keywords that describe your brand</label>
    <type>TextArea</type>
</CustomField>