unpackaged/main/default/objects/Database__c/recordTypes/AI_Lead_Nurture.recordType-meta.xml
<RecordType>
    <fullName>AI_Lead_Nurture</fullName>
    <active>true</active>
    <label>AI Lead Nurture</label>
</RecordType>