unpackaged/main/default/objects/Database__c/recordTypes/Credentials.recordType-meta.xml
<RecordType>
    <fullName>Credentials</fullName>
    <active>true</active>
    <label>Credentials</label>
</RecordType>