unpackaged/main/default/objects/Database__c/recordTypes/CSM_Book_Health.recordType-meta.xml
<RecordType>
    <fullName>CSM_Book_Health</fullName>
    <active>true</active>
    <label>CSM Health Assessment</label>
</RecordType>