unpackaged/main/default/objects/Database__c/recordTypes/Design_Intake.recordType-meta.xml
<RecordType>
    <fullName>Design_Intake</fullName>
    <active>true</active>
    <label>Design Intake</label>
</RecordType>