unpackaged/main/default/objects/Database__c/recordTypes/Leads_Pro.recordType-meta.xml
<RecordType>
    <fullName>Leads_Pro</fullName>
    <active>true</active>
    <label>Leads Pro</label>
</RecordType>