unpackaged/main/default/objects/Database__c/recordTypes/New_Campaign.recordType-meta.xml
<RecordType>
    <fullName>New_Campaign</fullName>
    <active>true</active>
    <label>New Campaign</label>
</RecordType>