unpackaged/main/default/objects/Database__c/recordTypes/New_Strategy_Brief.recordType-meta.xml
<RecordType>
    <fullName>New_Strategy_Brief</fullName>
    <active>true</active>
    <label>New Strategy Brief</label>
</RecordType>