unpackaged/main/default/objects/Database__c/recordTypes/On_Demand_Ads.recordType-meta.xml
<RecordType>
    <fullName>On_Demand_Ads</fullName>
    <active>true</active>
    <label>On-Demand Ads</label>
</RecordType>