unpackaged/main/default/objects/Database__c/recordTypes/Plan_Migration.recordType-meta.xml
<RecordType>
    <fullName>Plan_Migration</fullName>
    <active>true</active>
    <label>Plan Migration</label>
</RecordType>