unpackaged/main/default/objects/Database__c/recordTypes/Quiz.recordType-meta.xml
<RecordType>
    <fullName>Quiz</fullName>
    <active>true</active>
    <label>Quiz</label>
</RecordType>