unpackaged/main/default/objects/Database__c/recordTypes/SEO_Blog_Selection.recordType-meta.xml
<RecordType>
    <fullName>SEO_Blog_Selection</fullName>
    <active>true</active>
    <label>SEO Blog Selection</label>
</RecordType>