unpackaged/main/default/objects/Database__c/recordTypes/SEO_Pro.recordType-meta.xml
<RecordType>
    <fullName>SEO_Pro</fullName>
    <active>true</active>
    <label>SEO Pro</label>
</RecordType>