unpackaged/main/default/objects/Database__c/recordTypes/Strategy_Brief.recordType-meta.xml
<RecordType>
    <fullName>Strategy_Brief</fullName>
    <active>true</active>
    <label>Strategy Brief</label>
</RecordType>