unpackaged/main/default/objects/Database__c/listViews/AI_Lead_Nurture_Form_Results_wo_Account.listView-meta.xml
<ListView>
    <fullName>AI_Lead_Nurture_Form_Results_wo_Account</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.AI_Lead_Nurture</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>AI Lead Nurture Form Results w/o Account</label>
</ListView>