unpackaged/main/default/objects/Database__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand_Name__c</columns>
    <columns>Most_Important_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>