unpackaged/main/default/objects/Database__c/listViews/Design_Quiz1.listView-meta.xml
<ListView>
    <fullName>Design_Quiz1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand_Name__c</columns>
    <columns>Most_Important_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Design Quiz</value>
    </filters>
    <label>Design Quiz</label>
</ListView>