unpackaged/main/default/objects/Database__c/listViews/Leads_Pro_Form_Results.listView-meta.xml
<ListView>
    <fullName>Leads_Pro_Form_Results</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.Leads_Pro</value>
    </filters>
    <label>Leads Pro Form Results</label>
</ListView>