unpackaged/main/default/objects/Database__c/listViews/Leads_Pro_Form_Results_w_o_Accounts.listView-meta.xml
<ListView>
    <fullName>Leads_Pro_Form_Results_w_o_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.Leads_Pro</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Leads Pro Form Results w/o Accounts</label>
</ListView>