unpackaged/main/default/objects/Database__c/listViews/New_Strategy_Briefs_Without_Accounts.listView-meta.xml
<ListView>
    <fullName>New_Strategy_Briefs_Without_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.New_Strategy_Brief</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>New Strategy Briefs Without Accounts</label>
</ListView>