unpackaged/main/default/objects/Database__c/listViews/ODA_Forms_Received.listView-meta.xml
<ListView>
    <fullName>ODA_Forms_Received</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Monthly_ad_spend_level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.On_Demand_Ads</value>
    </filters>
    <label>ODA Forms Received</label>
</ListView>