unpackaged/main/default/objects/Database__c/listViews/ODA_Forms_Without_Accounts.listView-meta.xml
<ListView>
    <fullName>ODA_Forms_Without_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Email__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.On_Demand_Ads</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>ODA Forms Without Accounts</label>
</ListView>