unpackaged/main/default/objects/Database__c/listViews/Plan_Migration_Responses.listView-meta.xml
<ListView>
    <fullName>Plan_Migration_Responses</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.Plan_Migration</value>
    </filters>
    <label>Plan Migration Responses</label>
</ListView>