unpackaged/main/default/objects/Database__c/listViews/SEO_Pro_Form_Results.listView-meta.xml
<ListView>
    <fullName>SEO_Pro_Form_Results</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.New_Strategy_Brief,Database__c.SEO_Pro</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SEO Pro</value>
    </filters>
    <label>SEO Pro Form Results</label>
</ListView>