unpackaged/main/default/objects/Database__c/listViews/Strategy_Brief.listView-meta.xml
<ListView>
    <fullName>Strategy_Brief</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Database__c.New_Strategy_Brief,Database__c.Strategy_Brief</value>
    </filters>
    <label>Strategy Brief</label>
</ListView>